--- a/WeatherService/WeatherService/WeatherService.vcxproj
+++ b/WeatherService/WeatherService/WeatherService.vcxproj
@@ -127,10 +127,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="json.hpp" />
+    <ClInclude Include="JsonService.h" />
+    <ClInclude Include="Service.h" />
     <ClInclude Include="Weather.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="JsonService.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Service.cpp" />
     <ClCompile Include="Weather.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="weather.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="weather.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
