--- a/WeatherService/WeatherService/WeatherService.vcxproj
+++ b/WeatherService/WeatherService/WeatherService.vcxproj
@@ -128,9 +128,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Weather.h" />
+    <ClInclude Include="XmlService.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="pugixml-1.13\src\pugixml.cpp" />
     <ClCompile Include="Weather.cpp" />
+    <ClCompile Include="XmlService.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="weather.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
